testfx/errors/error_tests/edge_46_undefined_func.fx
// 测试：完全未定义的函数调用（应该失败）
main := () {
    result := neverDefined(10)
    print(result)
}
